--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1 {
 .blog-date {
   font-size: 14px;
   color: #888;
-  margin-inline-start: auto;
+  margin-left: auto;
 }
 
 .blog-title {
@@ -59,6 +59,19 @@ h1 {
 .blog-likes {
   font-size: 14px;
   color: #888;
+  display: inline-block;
+}
+
+.views-count {
+  font-size: 14px;
+  color: #888;
+  display: inline-block;
+  margin-left: auto;
+}
+
+.like-views-container {
+  display: flex;
+  align-items: center;
 }
 
 .admin-page {
