--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ h1 {
   margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 15px;
 }
 
 .title-box {
@@ -72,6 +73,7 @@ h1 {
 .like-views-container {
   display: flex;
   align-items: center;
+  margin-top: 7px;
 }
 
 .admin-page {
